2008-06-14  Perry McFarlane  <perry_m@fastmail.fm>
* input.c: 5200 bit 5 toggle fix (Star Trek)
* atari_sdl.c, input.c: fix shift+control keys


2008-06-13  Perry McFarlane  <perry_m@fastmail.fm>
* rdevice.c, configure.ac: fix for win32 R: device
* pokey.c: IRQEN fix
* pokeysnd.c: add #ifdef PBI_XLD


2008-06-12  Christian Groessler  <chris@groessler.org>
* rdevice.c, configure.ac: R: device now not longer inherently supports
network (with serial as an additional option). Now serial-only,
network-only, or both can be selected.


2008-05-31  Piotr Fusik  <fox@scene.pl>
* atari.c, pokey.c: made the BASIC version compilable


2008-05-29  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c, cassette.c, input.c, memory.c, pbi_bb.c, pbi_proto80.c,
pbi_xld.c, pokeysnd.c, sio.c, statesav.c, ui.h, util.[ch], votrax.c:
made compilable with g++. Fixed some bugs, and a bugfix for pbi_xld.c,
other minor fixes.


2008-05-28  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/USAGE, atari_sdl.c, configure.ac, pbi.c, pbi_proto80.c, pbi_proto80.h,
pbi_xld.c: added emulation of a prototype 80 column card for the Atari 1090
expansion box (SDL version).  Also fixed a problem with LoadImage in pbi_xld.c
* DOC/INSTALL: Improved documentation a bit, suggested use of SDL.
* input.[ch], pokey.c: record random_scanline_counter for event recording.


2008-05-27  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c, atari_ntsc.h, cassette.c, gtia.c, joycfg.c, monitor.c,
mzpokeysnd.c, pbi.c, pokeysnd.c, screen.c, sio.c, votrax.c:
Some spelling in comments corrected.
* mzpokeysnd.c: fix warnings


2008-05-26  Perry McFarlane  <perry_m@fastmail.fm>
* antic.[ch], atari.[ch], atari_sdl.c, cartridge.h, cassette.c, cpu.h,
gtia.[ch], javanvm/atari_javanvm.c, mzpokeysnd.c, pbi_bb.c, pbi_mio.c, 
pbi_scsi.c, pbi_xld.[ch], pia.h, platform.h, pokey.h, rtime.[ch], sio.h,
statesav.c, ui.c, ui_basic.c, util.[ch], votrax.[ch]:
I compiled with:
CC = gcc -ansi -pedantic -Wall -Waggregate-return -Wmissing-declarations 